--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ html, body {
     max-width: 600px;
     font-family: "Inter", serif;
     font-optical-sizing: auto;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 1.6;
     color: #333;
 }
@@ -666,5 +666,15 @@ html, body {
 @media (max-width: 1500px) {
     .certificates img {
         width: 300px;
+    }
+}
+
+@media (max-width: 900px) {
+    .section__about-me {
+        height: 100%;
+        padding: 80px 0;
+    }
+    .message__about-me {
+        flex-direction: column;
     }
 }
